Fix some alignments

--- a/app/styles/grids/default.less
+++ b/app/styles/grids/default.less
@@ -17,7 +17,7 @@
                     font-weight: bold;
                     font-size: 12px;
                     color: #fff;
-                    background: #efefef;
+                    background: @ssense_light_grey;
                     border-color:@ssense_border_gray;
                     word-wrap: break-word;
                 }
@@ -41,7 +41,7 @@
                 th, tbody tr td:first-of-type{
                     border-top: 1px solid @ssense_border_gray;
                     color: @ssense_table_text_color;
-                    background:@ssense_light_grey;
+                    background: @ssense_light_grey;
                     font-size: 11px;
                     font-weight: normal;
                 }
@@ -104,7 +104,6 @@
             }
             .ht_clone_left td {
               border-right: none;
-              // border-bottom: 1px solid @ssense_light_grey;
             }
         }
     }
